<resources>
    <string name="app_name">Gatekeeper</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="to_login">to login</string>
    <string name="login">login</string>
    <string name="password">Password</string>
    <string name="todo">TODO</string>
    <string name="email">Email</string>
    <string name="log_out">LOG OUT</string>
    <string name="take_a_photo">take a photo</string>
    <string name="choose_from_gallery">choose from gallery</string>
    <string name="add_plate_number">ADD PLATE NUMBER</string>
    <string name="edit_results">Edit Results</string>
    <string name="gender">Gender</string>
    <string name="with_friends">With Friends</string>
    <string name="with_spouse">With Spouse</string>
    <string name="with_family">With Family</string>
    <string name="day">Day</string>
    <string name="age_of_driver">Age Of Driver</string>
    <string name="tuesday">Tuesday</string>
    <string name="alone">Alone</string>
    <string name="_41_and_older">41 and Older</string>
    <string name="monday">Monday</string>
    <string name="thursday">Thursday</string>
    <string name="sunday">Sunday</string>
    <string name="saturday">Saturday</string>
    <string name="friday">Friday</string>
    <string name="wednesday">Wednesday</string>
    <string name="companions_of_the_driver">Companions of the driver</string>
    <string name="_26_40">26-40</string>
    <string name="_18_25">18-25</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="user_login">User Login</string>
    <string name="driver_s_name_optional">Driver\'s Name (Optional)</string>
    <string name="last_name_optional">Last Name (Optional)</string>
    <string name="entering">Entering</string>
    <string name="leaving">Leaving</string>
    <string name="gallery">gallery</string>
    <string name="camera">camera</string>
    <string name="title_activity_display">DisplayActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="gatekeeper_app">Gatekeeper App</string>

</resources>
